# tutorials

./: .gitignore  pyproject.toml
icl_structured_task_hypothesis/: icl_structured_task_hypothesis.ipynb  mappings.json
multi_dimensional_features/: activation_stats.py  gemma2.py  linear_probe_training.graffle  multi_dimension_features.ipynb  prepare_activations.py
support/: gemma2.py
